fix weights in title, letter spacing in main title and position of CTA section on mobile

--- a/sass/elements/_intro.scss
+++ b/sass/elements/_intro.scss
@@ -53,10 +53,32 @@
   z-index: 1;
   position: relative;
   line-height: size(h1, lh) * 1.5;
-
   @include breakpoint-max(md) {
     line-height: m-size(h1, lh);
   }
+
+  strong {
+    font-weight: 700;
+  }
+}
+
+.title--remote,
+.title--worker,
+.title--survey {
+  display: block;
+}
+
+.title--remote {
+  font-weight: 700;
+  letter-spacing: 6px;
+}
+
+.title--worker {
+  font-weight: 700;
+}
+
+.title--survey {
+  letter-spacing: 10px;
 }
 
 .cta__container {
@@ -65,6 +87,7 @@
 
   @include breakpoint-max(sm) {
     flex-flow: column-reverse;
+    padding-bottom: 0;
 
     .column--1-3 {
       @include make-col(12);
@@ -104,6 +127,7 @@
     top: auto;
     right: auto;
     width: auto;
+    padding-bottom: $line-height;
   }
 }
 
@@ -111,6 +135,10 @@
   @include font(p, $fm: secondary);
   color: main-colors(body, accent);
   text-transform: uppercase;
+
+  strong {
+    font-weight: 700;
+  }
 }
 
 .cta--take-survey {
@@ -131,10 +159,20 @@
     padding-top: $line-height * 1.5;
   }
 
+  strong {
+    font-weight: 700;
+  }
+
   @include breakpoint-max(sm) {
     float: none;
     margin: 0 auto;
-    margin-bottom: $line-height * 2 !important;
+    margin-bottom: 0;
+    position: fixed;
+    top: 85%;
+    right: 5%;
+
+    font-size: 0.5em;
+
   }
 }
 
